After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704469 - Crash when deleting a non-chat GOA account
Crash when deleting a non-chat GOA account
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-18 14:16 UTC by Marco Barisione
Modified: 2013-09-09 13:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GOA: ignore non-Telepathy accounts (1.20 KB, patch)
2013-07-18 14:19 UTC, Marco Barisione
committed Details | Review

Description Marco Barisione 2013-07-18 14:16:08 UTC
The mission control plugin that handles GOA should ignore non-Telepathy accounts, but it doesn't always do it. One of the consequences of this is that mc crashes when you delete a non-chat account in gnome-control-center.
Comment 1 Marco Barisione 2013-07-18 14:19:26 UTC
Created attachment 249521 [details] [review]
GOA: ignore non-Telepathy accounts

This fixes a crash when trying to remove a GOA account without chat
support.
Comment 2 Guillaume Desmottes 2013-07-18 14:27:17 UTC
Review of attachment 249521 [details] [review]:

gnome-3-8 and master please
Comment 3 Marco Barisione 2013-07-18 14:38:15 UTC
Pushed to both!
Comment 4 Guillaume Desmottes 2013-09-09 13:23:33 UTC
Attachment 249521 [details] pushed as 1fc5a6f - GOA: ignore non-Telepathy accounts