GOA: ignore non-Telepathy accounts

This fixes a crash when trying to remove a GOA account without chat
support.

https://bugzilla.gnome.org/show_bug.cgi?id=704469